@@ -1,3 +1,9 @@
+2012-07-02 Srecko Morovic <srecko.morovic@cern.ch>
+
+	* tag V01-00-21
+	* setting discard counters before sending event
+	* atomic global counter for dqm discard/send bookkeeping
+
 2012-06-29 Srecko Morovic <srecko.morovic@cern.ch>
 
 	* tag V01-00-20
